updated  rnn  for project 8 2 sections

--- a/section_2/RNN_project_8.ipynb
+++ b/section_2/RNN_project_8.ipynb
@@ -5,20 +5,16 @@
    "id": "e9d01c08",
    "metadata": {},
    "source": [
-    "# Project 8 : RNN\n",
+    "# Project 8 : Building an RNN From Scratch (A Beginner-Friendly Walkthrough)\n",
     "\n",
-    "1. Generate the Time‑Series Data\n",
-    "Created a synthetic weather sequence using an autoregressive rule:\n",
+    "Recurrent Neural Networks (RNNs) are designed to handle sequential data. Unlike feed‑forward networks, which treat each input independently, an RNN carries information forward through time using a hidden state. This makes it suitable for time‑series data such as weather, text, audio, or stock prices.\n",
     "\n",
-    "Each new temperature depends on the previous two temperatures\n",
-    "- Plus a bit of Gaussian noise\n",
-    "\n",
-    "This gives a realistic time‑series pattern with memory and randomness."
+    "In this section, we build an RNN entirely from scratch using NumPy. The goal is to understand the mechanics of recurrence, hidden state updates, and backpropagation through time (BPTT) without relying on deep‑learning frameworks."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0593c300",
    "metadata": {},
    "outputs": [],
@@ -27,19 +23,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a135edf7",
+   "metadata": {},
+   "source": [
+    "# Generating a Synthetic Weather Time-Series\n",
+    "\n",
+    "To train an RNN, we need a sequence with memory. Weather is a natural example: \n",
+    "today’s temperature depends on previous days plus some randomness.\n",
+    "\n",
+    "We generate a simple autoregressive process:\n",
+    "\n",
+    "`T_t = 0.7 * T_(t-1) + 0.2 * T_(t-2) + Normal(0, 0.5)`\n",
+    "\n",
+    "This produces a smooth temperature sequence with short-term memory and noise.\n",
+    "We will use the first 5 days to predict day 6.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2f272a3a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[20, 21, 19.165781784734058, 16.087429935013184, 15.307597421130193] 14.672780156181451\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temps = []\n",
     "temps.append(20)   # seed day 0\n",
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "f86fd291",
    "metadata": {},
    "outputs": [
@@ -90,12 +96,12 @@
      "text": [
       "\n",
       "Weights:\n",
-      "W_xh: [-0.01120693]\n",
-      "W_hh: [0.00323926]\n",
-      "b_h : [1.49454101] \n",
+      "W_xh: [-0.0153758]\n",
+      "W_hh: [-0.01113899]\n",
+      "b_h : [-0.65919943] \n",
       "\n",
-      "W_hy: [0.0246548]\n",
-      "b_y : -1.1758237039803698\n"
+      "W_hy: [0.01334814]\n",
+      "b_y : 1.4508480445114487\n"
      ]
     }
    ],
@@ -150,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "bd70a3f2",
    "metadata": {},
    "outputs": [
@@ -158,9 +164,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final h: [0.86821787]\n",
-      "Prediction: [-1.15441796]\n",
-      "Target: 14.672780156181451\n"
+      "Final h: [-0.71339194]\n",
+      "Prediction: [1.44132559]\n",
+      "Target: -0.35826484905289013\n"
      ]
     }
    ],
@@ -229,18 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "222172a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss: [250.50020029]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loss\n",
     "loss = (y_pred - target)**2\n",
@@ -276,22 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "182d885e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dW_xh: [-2.94371973]\n",
-      "dW_hh: [-0.16653561]\n",
-      "db_h : [-0.19229653]\n",
-      "dW_hy: [-27.48291246]\n",
-      "db_y : [-31.65439624]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize RNN parameter grads\n",
     "dW_xh = 0.0\n",
@@ -353,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6f28fbf6",
    "metadata": {},
    "outputs": [],
@@ -452,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9044ba2b",
    "metadata": {},
    "outputs": [],
@@ -468,18 +454,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9830c1e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(95, 5) (95,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X, y = make_dataset(temps, seq_len=5)\n",
     "print(X.shape, y.shape)\n"
@@ -487,27 +465,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f22256ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 0, total_loss=[2141.77044345]\n",
-      "epoch 250, total_loss=[565.42410998]\n",
-      "epoch 500, total_loss=[167.68090605]\n",
-      "epoch 750, total_loss=[85.33345951]\n",
-      "epoch 1000, total_loss=[53.24991208]\n",
-      "epoch 1250, total_loss=[38.46009129]\n",
-      "epoch 1500, total_loss=[31.93027038]\n",
-      "epoch 1750, total_loss=[27.95588329]\n",
-      "epoch 2000, total_loss=[26.03146945]\n",
-      "epoch 2250, total_loss=[25.23165896]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = RNNPredictor(input_size=1, hidden_size=20)\n",
     "\n",
@@ -525,20 +486,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "efa9370d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input: [20, 21, 19.165781784734058, 16.087429935013184, 15.307597421130193]\n",
-      "Prediction: [12.81218303]\n",
-      "True next value: 14.672780156181451\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_seq = temps[:5]          # or any 5‑day window\n",
     "pred, hs, raws = model.forward_sequence(test_seq)\n",
@@ -550,33 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a0628337",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.86059713])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "error = (pred - temps[5])\n",
     "error"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6728a698",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
