started project nine file.

--- a/section_2/RNN_pytorch_8_2.ipynb
+++ b/section_2/RNN_pytorch_8_2.ipynb
@@ -40,18 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0af5384a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[20, 21, 18.28143859043176, 17.268550713262034, 15.88441994345271] 14.620642581377346\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -74,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7d42aea7",
    "metadata": {},
    "outputs": [],
@@ -95,11 +87,11 @@
     "        self.fc = nn.Linear(hidden_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # x: (batch, seq_len, input_size)\n",
+    "        # x: (batch, seq_len, input_size) \n",
     "        out, h = self.rnn(x)\n",
     "        last_h = out[:, -1, :]   # final hidden state\n",
     "        y_pred = self.fc(last_h)\n",
-    "        return y_pred\n"
+    "        return y_pred"
    ]
   },
   {
@@ -116,19 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6181a154",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([95, 5, 1]) torch.Size([95, 1])\n",
-      "torch.Size([5, 1])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_dataset(data, seq_len=5):\n",
     "    X, y = [], []\n",
@@ -176,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3cdf37c8",
    "metadata": {},
    "outputs": [],
@@ -189,27 +172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7810e8e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 0, loss=17.7383\n",
-      "epoch 300, loss=0.2215\n",
-      "epoch 600, loss=0.1898\n",
-      "epoch 900, loss=0.1098\n",
-      "epoch 1200, loss=0.0668\n",
-      "epoch 1500, loss=0.0380\n",
-      "epoch 1800, loss=0.0176\n",
-      "epoch 2100, loss=0.0124\n",
-      "epoch 2400, loss=0.0061\n",
-      "epoch 2700, loss=0.0066\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 3000\n",
     "\n",
@@ -228,20 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "59b58b9a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input: [20, 21, 18.28143859043176, 17.268550713262034, 15.88441994345271]\n",
-      "Prediction: 14.602416038513184\n",
-      "True next value: 14.620642581377346\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_seq = torch.tensor(temps[:5]).unsqueeze(0).unsqueeze(-1)\n",
     "pred = model(test_seq)\n",
@@ -252,12 +208,423 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9b6ee86",
+   "metadata": {},
+   "source": [
+    "# One To Many"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a94fe1",
+   "id": "ff010a23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class RNNotm(nn.Module):\n",
+    "    def __init__(self, input_size=1, hidden_size=20):\n",
+    "        super().__init__()\n",
+    "        self.rnn = nn.RNN(\n",
+    "            input_size=input_size,\n",
+    "            hidden_size=hidden_size,\n",
+    "            batch_first=True\n",
+    "        )\n",
+    "        self.fc = nn.Linear(hidden_size, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x: (batch, seq_len, input_size)\n",
+    "        out, h = self.rnn(x)\n",
+    "        last_h = out[:, -1, :]   # final hidden state\n",
+    "        y_pred = self.fc(last_h)\n",
+    "        return y_pred\n",
+    "    \n",
+    "    def generate(self, x0, steps=10):\n",
+    "        \"\"\"\n",
+    "        x0: (batch, seq_len, input_size) initial sequence\n",
+    "        steps: how many future steps to generate\n",
+    "        \"\"\"\n",
+    "        self.eval()  # generation mode\n",
+    "\n",
+    "        outputs = []\n",
+    "        x = x0\n",
+    "        h = None\n",
+    "\n",
+    "        for _ in range(steps):\n",
+    "            out, h = self.rnn(x, h)\n",
+    "            last_h = out[:, -1, :]\n",
+    "            y = self.fc(last_h)              # next predicted value\n",
+    "            outputs.append(y)\n",
+    "\n",
+    "            # feed prediction back in as next input\n",
+    "            x = torch.cat([x[:, 1:, :], y.unsqueeze(1)], dim=1)\n",
+    "\n",
+    "        return torch.stack(outputs, dim=1)   # (batch, steps, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845bc792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_otm = RNNotm(input_size=1, hidden_size=20)\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model_otm.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5a33e29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train model...\n",
+    "for epoch in range(3000):\n",
+    "    optimizer.zero_grad()\n",
+    "    y_pred = model_otm(X)\n",
+    "    loss = loss_fn(y_pred, y)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "# now generate\n",
+    "seed = X[0].unsqueeze(0)\n",
+    "future = model_otm.generate(seed, steps=10)\n",
+    "\n",
+    "print(\"seed =\", seed)\n",
+    "print(\"future shape =\", future.shape)\n",
+    "print(\"future =\", future)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "747e7b26",
+   "metadata": {},
+   "source": [
+    "# seq to seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f6e422a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = [\n",
+    "    (\"hello\", \"hola\"),\n",
+    "    (\"how are you\", \"cómo estás\"),\n",
+    "    (\"i am fine\", \"estoy bien\"),\n",
+    "    (\"thank you\", \"gracias\"),\n",
+    "    (\"good morning\", \"buenos días\"),\n",
+    "    (\"good night\", \"buenas noches\"),\n",
+    "    (\"see you later\", \"hasta luego\"),\n",
+    "    (\"i love you\", \"te quiero\"),\n",
+    "    (\"what is your name\", \"cómo te llamas\"),\n",
+    "    (\"my name is john\", \"me llamo john\"),\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e299fadb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def build_vocab(sentences):\n",
+    "    counter = Counter()\n",
+    "    for s in sentences:\n",
+    "        counter.update(s.split())\n",
+    "\n",
+    "    vocab = [\"<pad>\", \"<sos>\", \"<eos>\"] + sorted(counter.keys())\n",
+    "    stoi = {w:i for i,w in enumerate(vocab)}\n",
+    "    itos = {i:w for w,i in stoi.items()}\n",
+    "    return vocab, stoi, itos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c9ae51b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng_sentences = [e for e, _ in pairs]\n",
+    "spa_sentences = [s for _, s in pairs]\n",
+    "\n",
+    "eng_vocab, eng_stoi, eng_itos = build_vocab(eng_sentences)\n",
+    "spa_vocab, spa_stoi, spa_itos = build_vocab(spa_sentences)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8deccbf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode_sentence(sentence, stoi):\n",
+    "    tokens = sentence.split()\n",
+    "    ids = [stoi[\"<sos>\"]] + [stoi[t] for t in tokens] + [stoi[\"<eos>\"]]\n",
+    "    return ids\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4d705af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_pairs = [\n",
+    "    (encode_sentence(e, eng_stoi), encode_sentence(s, spa_stoi))\n",
+    "    for e, s in pairs\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c59212d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad_sequence(seq, max_len, pad_idx):\n",
+    "    return seq + [pad_idx] * (max_len - len(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5362db92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_batch(encoded_pairs):\n",
+    "    eng_max = max(len(e) for e, _ in encoded_pairs)\n",
+    "    spa_max = max(len(s) for _, s in encoded_pairs)\n",
+    "\n",
+    "    eng_batch = []\n",
+    "    spa_batch = []\n",
+    "\n",
+    "    for e, s in encoded_pairs:\n",
+    "        eng_batch.append(pad_sequence(e, eng_max, eng_stoi[\"<pad>\"]))\n",
+    "        spa_batch.append(pad_sequence(s, spa_max, spa_stoi[\"<pad>\"]))\n",
+    "\n",
+    "    return torch.tensor(eng_batch), torch.tensor(spa_batch)\n",
+    "\n",
+    "src_batch, tgt_batch = make_batch(encoded_pairs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d17194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class TranslationDataset(Dataset):\n",
+    "    def __init__(self, encoded_pairs):\n",
+    "        self.data = encoded_pairs\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        src, tgt = self.data[idx]\n",
+    "        return torch.tensor(src), torch.tensor(tgt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748cdfe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collate_fn(batch):\n",
+    "    src_batch, tgt_batch = zip(*batch)\n",
+    "\n",
+    "    src_max = max(len(s) for s in src_batch)\n",
+    "    tgt_max = max(len(t) for t in tgt_batch)\n",
+    "\n",
+    "    def pad(seq, max_len, pad_idx):\n",
+    "        pad_tensor = torch.tensor([pad_idx] * (max_len - len(seq)), dtype=torch.long)\n",
+    "        return torch.cat([seq, pad_tensor])\n",
+    "\n",
+    "    src_padded = torch.stack([pad(s, src_max, eng_stoi[\"<pad>\"]) for s in src_batch])\n",
+    "    tgt_padded = torch.stack([pad(t, tgt_max, spa_stoi[\"<pad>\"]) for t in tgt_batch])\n",
+    "\n",
+    "    return src_padded.long(), tgt_padded.long()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aed9cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = TranslationDataset(encoded_pairs)\n",
+    "loader = DataLoader(dataset, batch_size=4, shuffle=True, collate_fn=collate_fn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dabe7cd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, vocab_size, embed_size, hidden_size):\n",
+    "        super().__init__()\n",
+    "        self.embed = nn.Embedding(vocab_size, embed_size)\n",
+    "        self.rnn = nn.RNN(embed_size, hidden_size, batch_first=True)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        embedded = self.embed(x)\n",
+    "        outputs, hidden = self.rnn(embedded)\n",
+    "        return hidden  # (1, batch, hidden)\n",
+    "    \n",
+    "\n",
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, vocab_size, embed_size, hidden_size):\n",
+    "        super().__init__()\n",
+    "        self.embed = nn.Embedding(vocab_size, embed_size)\n",
+    "        self.rnn = nn.RNN(embed_size, hidden_size, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, x, hidden):\n",
+    "        embedded = self.embed(x)\n",
+    "        output, hidden = self.rnn(embedded, hidden)\n",
+    "        logits = self.fc(output)\n",
+    "        return logits, hidden\n",
+    "    \n",
+    "\n",
+    "class Seq2Seq(nn.Module):\n",
+    "    def __init__(self, encoder, decoder):\n",
+    "        super().__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "\n",
+    "    def forward(self, src, tgt):\n",
+    "        hidden = self.encoder(src)\n",
+    "        outputs, _ = self.decoder(tgt[:, :-1], hidden)\n",
+    "        return outputs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f39c8c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "embed_size = 64\n",
+    "hidden_size = 128\n",
+    "\n",
+    "encoder = Encoder(len(eng_vocab), embed_size, hidden_size).to(device)\n",
+    "decoder = Decoder(len(spa_vocab), embed_size, hidden_size).to(device)\n",
+    "model = Seq2Seq(encoder, decoder).to(device)\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss(ignore_index=spa_stoi[\"<pad>\"])\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7611e728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 200\n",
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    total_loss = 0\n",
+    "\n",
+    "    for src, tgt in loader:\n",
+    "        src, tgt = src.to(device), tgt.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        logits = model(src, tgt)  # (batch, seq_len-1, vocab)\n",
+    "        loss = criterion(\n",
+    "            logits.reshape(-1, logits.size(-1)),\n",
+    "            tgt[:, 1:].reshape(-1)\n",
+    "        )\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "    if epoch % 20 == 0:\n",
+    "        print(f\"Epoch {epoch} Loss: {total_loss:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc8aaffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def translate(sentence):\n",
+    "    model.eval()\n",
+    "\n",
+    "    # Encode the English sentence\n",
+    "    src_ids = encode_sentence(sentence, eng_stoi)\n",
+    "    src = torch.tensor(src_ids, dtype=torch.long).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # Encode with the encoder\n",
+    "    hidden = encoder(src)\n",
+    "\n",
+    "    # Start decoder with <sos>\n",
+    "    tgt_idx = spa_stoi[\"<sos>\"]\n",
+    "    tgt = torch.tensor([[tgt_idx]], dtype=torch.long).to(device)\n",
+    "\n",
+    "    result_tokens = []\n",
+    "\n",
+    "    for _ in range(20):  # max output length\n",
+    "        logits, hidden = decoder(tgt, hidden)\n",
+    "\n",
+    "        # Get the last predicted token\n",
+    "        next_token = logits[:, -1].argmax(dim=-1).item()\n",
+    "\n",
+    "        if next_token == spa_stoi[\"<eos>\"]:\n",
+    "            break\n",
+    "\n",
+    "        result_tokens.append(spa_itos[next_token])\n",
+    "\n",
+    "        # Feed the predicted token back into the decoder\n",
+    "        tgt = torch.tensor([[next_token]], dtype=torch.long).to(device)\n",
+    "\n",
+    "    return \" \".join(result_tokens)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93cb0944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(translate(\"hello\"))\n",
+    "print(translate(\"i love you\"))\n",
+    "print(translate(\"thank you\"))\n",
+    "print(translate(\"what is your name\"))\n"
+   ]
   }
  ],
  "metadata": {
